<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello New Term</string>string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TextViewWord">Here are my widgets:</string>
    <string name="ButtonWord">button</string>
    <string name="CheckBoxWord">Check this out!</string>
    <string name="SwitchWord">Switch on / off</string>
    <string name="EditTextWord">Type your answer here</string>

    <string name="email1">Enter your email address:</string>
    <string name="inemail">Type email here</string>
    <string name="password">Type your password</string>
    <string name="login">LOGIN</string>
    <string name="profile">Your profile:</string>
    <string name="pname">Your name:</string>
    <string name="hname">Enter your name</string>
    <string name="pemail">Your email:</string>
    <string name="hemail">Enter your Email</string>
    <string name="ppicture">Your picture:</string>
    <string name="click">Click the button above to take a picture:</string>

    <string name="receive">RECEIVE</string>
    <string name="send">SEND</string>
    <string name="put">Type here</string>
    <string name="rowr">objects</string>
    <string name="rows">objects</string>
    <string name="chat">Go to chat</string>

    <string name="toolbar">Go to Toolbar page</string>

</resources>
