<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pname" />

    <EditText
        android:id="@+id/inName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hname"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pemail" />

    <EditText
        android:id="@+id/inEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hemail"/>

    <TextView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ppicture" />

    <ImageButton
        android:id="@+id/inPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        />

    <TextView
        android:id="@+id/clickb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click" />
</LinearLayout>