<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/TextViewWord"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@id/imageButton"
        android:layout_below="@id/textView"
        android:text="@string/ButtonWord" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textView"
        android:paddingRight="8dp"
        android:src="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentLeft="true"
        android:text="@string/CheckBoxWord" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="68dp"
        android:layout_toRightOf="@id/checkBox"
        android:text="@string/SwitchWord" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:inputType="textPersonName"
        android:hint="@string/EditTextWord" />

</RelativeLayout>